--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# Write a python program which starts from the root of the binary tree and traverses every leaf, returning the path taken from root to leaf. "
    ]
   },
   {
@@ -54,7 +54,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# example given root = [10, 6, 13, 8, 9, 18, 22] the in-order transversal to leaves will give the following output [10, 6, 8], [10, 6, 9], [10, 13, 18], [10, 13, 22]\n",
+    "#"
    ]
   },
   {
@@ -71,7 +72,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "#  Given the `root` of a binary tree, return all root to leaf paths in any order.\n",
+    "# Definition for a binary tree node.\n",
+    "class TreeNode(object):\n",
+    "    def __init__(self, val = 0, left = None, right = None):\n",
+    "        self.val = val\n",
+    "        self.left = left\n",
+    "        self.right = right\n",
+    "\n",
+    "from typing import List\n",
+    "def bt_path(root: TreeNode) -> List[List[int]]:\n",
+    "# TODO\n",
+    "  paths = [] # create a list\n",
+    "\n",
+    "  if root.left is not None: # if not base case - explore left path\n",
+    "    paths.extend(list(map(lambda l: l + [root.val], bt_path(root.left))))   # add new root to banch of pathes from left\n",
+    "  else:  \n",
+    "    paths.append([root.val]) # if leaf create new path\n",
+    "    return paths\n",
+    "\n",
+    "  if root.right is not None: # if not base case - explore right path\n",
+    "    paths.extend(list(map(lambda l: l + [root.val], bt_path(root.right))))  # add new root to banch of pathes from right\n",
+    "  else: paths.append([root.val]) # if leaf create new path\n",
+    "\n",
+    "  return paths #return branch of paths\n",
+    "# Considering that input stored in breadth-first order\n",
+    "# Considering that tree is a complete binary tree\n",
+    "# 2i + 1 (for the left child) and 2i + 2  (for the right child)\n",
+    "# (i-1)/2 (for the parent)\n",
+    "import random\n",
+    "def insert_level_order(list, root, i, n):\n",
+    "    if i < n:\n",
+    "        temp = TreeNode(list[i])\n",
+    "        root = temp\n",
+    "        root.left = insert_level_order(list, root.left, 2 * i + 1, n)        # Left child\n",
+    "        root.right = insert_level_order(list, root.right, 2 * i + 2, n)      # Right child\n",
+    "    return root\n",
+    "\n",
+    "def generate_random_tree(num_nodes, value_range):\n",
+    "    values = [random.randint(*value_range) for _ in range(num_nodes)]\n",
+    "    return insert_level_order(values, None, 0, len(values))\n",
+    "root = TreeNode(1)\n",
+    "root.left = TreeNode(2)\n",
+    "root.right = TreeNode(2)\n",
+    "root.left.left = TreeNode(3)\n",
+    "root.left.right = TreeNode(5)\n",
+    "root.right.left = TreeNode(6)\n",
+    "root.right.right = TreeNode(7)\n",
+    "\n",
+    "paths = bt_path(root)\n",
+    "print(paths)"
    ]
   },
   {
@@ -88,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "#The given solution works as it uses recursion to traverse the tree from leaf to root. it adds the current nodes valu to the path returned from its children. "
    ]
   },
   {
@@ -105,7 +155,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# The time complexity of the given solution is O(n^2) as the function is called n number of times for each given node \n",
+    "# space complexity is also O(n^2) as we can have n paths each of legth n "
    ]
   },
   {
@@ -118,11 +169,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# The space and time complexity of the given solution can be improved. Another probabale solution can be proposed with a time complexity of O(n) and space complexity of O(h). \n",
+    "# A possible algorithm for dfs function can be as follows\n",
+    "# 1. If the current node is empty, return\n",
+    "# 2. add current node to current path\n",
+    "# 3. checkif node is leaf or \n",
+    "# 3a. if leaf , add to current path and add to result set.\n",
+    "# 3b. if not a leaf call call dfs to each child     "
    ]
   },
   {
@@ -198,8 +255,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "dsi_participant",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
